# ockam

./: Cargo.toml
.github/actions/build_app/: action.yml
.github/actions/build_binaries/: action.yml
.github/actions/elixir_cache/: action.yml
.github/workflows/: all.yml  elixir.yml  gradle.yml  release-binaries.yml  release-draft-binaries.yml  rust.yml  scorecards.yml
implementations/rust/: Makefile
implementations/rust/ockam/ockam/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_abac/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_api/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_app/: Cargo.toml  tauri.conf.json
implementations/rust/ockam/ockam_app_lib/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_command/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_core/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_executor/: CHANGELOG.md
implementations/rust/ockam/ockam_ffi/: CHANGELOG.md
implementations/rust/ockam/ockam_identity/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_macros/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_multiaddr/: CHANGELOG.md  Cargo.toml
implementations/rust/ockam/ockam_node/: CHANGELOG.md  (+1 more)
implementations/rust/ockam/ockam_plugin/: Cargo.toml
implementations/rust/ockam/ockam_plugin/src/: lib.rs  loader.rs
implementations/rust/ockam/ockam_pong/: Cargo.toml
implementations/rust/ockam/ockam_pong/src/: api.rs  command.rs  lib.rs  service.rs
implementations/swift/: Makefile
tools/cross/: Cross.Dockerfile.armv7
(+34 files in other folders)
