[package]
name = "ockam_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"
clap = { version = "4.0.11", features = ["derive", "cargo", "wrap_help"] }

ockam = { path = "../ockam", version = "^0.77.0", default_features = false }
ockam_core = { path = "../ockam_core", version = "^0.71.0", default_features = false }
