[package]
name = "ockam_pong"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
clap = { version = "4.0.11", features = ["derive", "cargo", "wrap_help"] }

ockam = { path = "../ockam", version = "^0.77.0", features = ["software_vault"] }
ockam_abac = { path = "../ockam_abac", version = "0.11.0", features = ["std"] }
ockam_api = { path = "../ockam_api", version = "0.20.0", features = ["std", "authenticators"] }
ockam_multiaddr = { path = "../ockam_multiaddr", version = "0.11.0", features = ["std"] }
ockam_vault = { path = "../ockam_vault", version = "^0.67.0", features = ["storage"] }
ockam_core = { path = "../ockam_core", version = "^0.71.0" }
ockam_identity = { path = "../ockam_identity", version = "^0.65.0" }
ockam_command = { path = "../ockam_command", version = "^0.77.0" }
